Fixes team on mobile

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -46,4 +46,6 @@ img.aidx {
 
 .member-details {
   display: inline-block;
+  width: 430px;
+  max-width: 100%;
 }
